# shellhub-python

./: .flake8  .pep8speaks.yml  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: build_pkg.yml  deploy.yml  lint-commits.yml  linting.yml  publish.yml  tests.yml  version-check.yml
dst_package/: __init__.py
scripts/: check_version.py  lint-commit.sh
shellhub/: __init__.py  exceptions.py
shellhub/models/: base.py  device.py
tests/: conftest.py  test_base.py  test_devices.py  utils.py
