# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | .venv
  | venv
  | env
  | .git
  | migrations
)/
'''

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "dst_package"
authors = [
    {name = "Jules Lasne", email = "jules@datascientest.com"},
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language:: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [""]

[tool.setuptools]
packages = ["dst_package"]

[tool.setuptools.dynamic]
version = {attr = "dst_package.__version__"}
