# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | .venv
  | venv
  | env
  | .git
  | migrations
)/
'''

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "shellhub"
authors = [
    {name = "Jules Lasne", email = "jules.lasne@gmail.com"},
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language:: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
packages = [
    "shellhub",
    "shellhub.models",
]

[tool.setuptools.dynamic]
version = {attr = "shellhub.__version__"}

[tool.coverage.run]
branch = true
source = ['shellhub/', 'tests/']

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "tests",
]
addopts = [
  "--strict-markers",
  "-W ignore::DeprecationWarning",
  "-W ignore::PendingDeprecationWarning",
]
markers = [
]
